# lmjcore-web

./: .gitignore  .gitmodules  CMakeLists.txt  QWEN.md  README.md  lmjcore.conf
doc/: progress_report.md
doc/lmjcore-web/: API_REFERENCE.md  README.md  lmjcore_web.md
docs/: migration_to_llhttp.md
include/: chain_query.h  config.h  error_codes.h  error_response.h  errors.h  handle_utils.h  http_parser.h  http_server.h  lmjcore_handle.h  lmjcore_server.h  lmjcore_web.h  log.h  ptr_generator.h  routes.h
src/: chain_query.c  config.c  http_parser.c  http_server.c  lmjcore_handle.c  lmjcore_web.c  log.c  main.c  ptr_generator.c  routes.c
src/handlers/: handle_utils.c  obj_handle.c  set_handle.c  utils_handle.c
tests/: CMakeLists.txt  api_test.html  httpServer.c  server  test_client.py
